<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="fr.uca.bitcoinchecker.viewmodel.AddNotificationActivityViewModel"/>
        <import type="fr.uca.bitcoinchecker.view.adapter.DataBindingAdapters"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/activity_margin"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="text_crypto_name,text_notif_choice,text_value_dollar" />

            <TextView
                android:layout_height="wrap_content"
                android:inputType="none"
                android:id="@+id/text_crypto_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:text="@string/cryptoName"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:importantForAutofill="no"
                android:id="@+id/edit_crypto_name"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_crypto_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/barrier"
                android:cursorVisible="false"
                android:focusable="false" />
            <TextView
                android:id="@+id/text_notif_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_crypto_name"
                android:text="@string/choice_up_down"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toTopOf="@+id/text_notif_choice"
                android:id="@+id/spinner_choice_up_down"/>
            <TextView
                android:id="@+id/text_value_dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:layout_weight = "0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_choice_up_down"
                android:text="@string/value_in_dollar"/>
            <EditText
                android:hint="@string/value_receive_notif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1"
                android:id="@+id/edit_value_dollar"
                android:text="@{viewModel.notification.value}"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_value_dollar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/barrier" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:onClick="addNotif"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_notification"/>
    </LinearLayout>
</layout>